Initial layout and placeholder content

--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="robots" content="nofollow">
+    <meta name="author" content="Michael Incardona">
+    <meta name="description" content="">
     <title>an interesting title</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-there's nothing here
+<div id="big-title">
+Michael Incardona
+</div>
+<nav id="big-nav"><a href="index.html">Home</a><a href="https://github.com/mincardona" target="_blank" rel="noopener noreferrer">GitHub &#x1F875;</a><a href="https://www.linkedin.com/in/michael-incardona-453757104/" target="_blank" rel="noopener noreferrer">LinkedIn &#x1F875;</a></nav>
+<div id="main-content">
+<h1>Work in Progress</h1>
+<p>
+Gallia est omnis divisa in partes tres, quarum unam incolunt Belgae, aliam Aquitani, tertiam qui ipsorum lingua Celtae, nostra Galli appellantur. Hi omnes lingua, institutis, legibus inter se differunt. Gallos ab Aquitanis Garumna flumen, a Belgis Matrona et Sequana dividit. Horum omnium fortissimi sunt Belgae, propterea quod a cultu atque humanitate provinciae longissime absunt, minimeque ad eos mercatores saepe commeant atque ea quae ad effeminandos animos pertinent important, proximique sunt Germanis, qui trans Rhenum incolunt, quibuscum continenter bellum gerunt. Qua de causa Helvetii quoque reliquos Gallos virtute praecedunt, quod fere cotidianis proeliis cum Germanis contendunt, cum aut suis finibus eos prohibent aut ipsi in eorum finibus bellum gerunt. Eorum una pars, quam Gallos obtinere dictum est, initium capit a flumine Rhodano, continetur Garumna flumine, Oceano, finibus Belgarum, attingit etiam ab Sequanis et Helvetiis flumen Rhenum, vergit ad septentriones. Belgae ab extremis Galliae finibus oriuntur, pertinent ad inferiorem partem fluminis Rheni, spectant in septentrionem et orientem solem. Aquitania a Garumna flumine ad Pyrenaeos montes et eam partem Oceani quae est ad Hispaniam pertinet; spectat inter occasum solis et septentriones.
+</p>
+</div>
+<hr id="footer-rule">
+<div id="footer">
+    Copyright &copy; 2020 Michael Incardona
+</div>
 </body>
 </html>
