Add placeholder description and meta viewport

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="robots" content="nofollow">
     <meta name="author" content="Michael Incardona">
-    <meta name="description" content="">
+    <meta name="description" content="an interesting description">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>an interesting title</title>
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
