Tweak some styling

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-<div id="big-title">
-Michael Incardona
-</div>
-<nav id="big-nav"><a href="index.html">Home</a><a href="https://github.com/mincardona" target="_blank" rel="noopener noreferrer">GitHub &#x1F875;</a><a href="https://www.linkedin.com/in/michael-incardona-453757104/" target="_blank" rel="noopener noreferrer">LinkedIn &#x1F875;</a></nav>
+<div id="big-title">Michael Incardona</div>
+<nav id="big-nav"><a href="index.html">Home</a><span class="nav-section-separator">|</span><a class="external-link" href="https://github.com/mincardona">GitHub</a><a class="external-link" href="https://www.linkedin.com/in/michael-incardona-453757104/">LinkedIn</a></nav>
 <div id="main-content">
 <h1>Work in Progress</h1>
 <p>
@@ -21,8 +19,6 @@ Gallia est omnis divisa in partes tres, quarum unam incolunt Belgae, aliam Aquit
 </p>
 </div>
 <hr id="footer-rule">
-<div id="footer">
-    Copyright &copy; 2020 Michael Incardona
-</div>
+<div id="footer">Copyright &copy; 2020 Michael Incardona</div>
 </body>
 </html>
